Js.html v.final

--- a/TareaL-HTML5/Js.html
+++ b/TareaL-HTML5/Js.html
@@ -1,49 +1,96 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <title> JS History </title>
+    <title>TDI History</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Breve Historia De JavaScript</title>
 </head>
 <body>
     <header>
         <h1> Historia de Tecnologías para el Desarrollo en el Internet. </h1>
         <nav>
             <ul>
-                <li><a href="Css.html">CSS</a></li>
                 <li><a href="Html.html">HTML</a></li>
+                <li><a href="Css.html">CSS</a></li>
+                <li><a href="Js.html">JAVASCRIPT</a></li>
             </ul>
         </nav>
     </header>
 
     <main>
-        <section>
-            <h2>Historia de JavaScript</h2>
-            <article>
-                <p>JavaScript es un lenguaje de programación de alto nivel que se utiliza principalmente para agregar interactividad a las páginas web. Fue creado por Brendan Eich y lanzado por primera vez en diciembre de 1995.</p>
-                <p>A lo largo de los años, JavaScript ha evolucionado con varias versiones importantes:</p>
-                <ul>
-                    <li>JavaScript 1.0 (1995)</li>
-                    <li>JavaScript 1.1 (1996)</li>
-                    <li>JavaScript 1.2 (1997)</li>
-                    <li>JavaScript 1.3 (1998)</li>
-                    <li>JavaScript 1.4 (1999)</li>
-                    <li>JavaScript 1.5 (2000)</li>
-                    <li>ECMAScript 3 (1999)</li>
-                    <li>ECMAScript 5 (2009)</li>
-                    <li>ECMAScript 6 (2015)</li>
-                    <li>ECMAScript 2016 (ES7)</li>
-                    <li>ECMAScript 2017 (ES8)</li>
-                    <li>ECMAScript 2018 (ES9)</li>
-                </ul>
-                <p>JavaScript se ha convertido en un lenguaje fundamental para el desarrollo web y se utiliza en una variedad de aplicaciones, desde páginas web simples hasta aplicaciones web complejas y móviles.</p>
-            </article>
-        </section>
-    </main>
+        <article>
+        <h2>Historia de JavaScript! El único lenguaje que entienden los navegadores!!</h2> 
+            <section>
+                <img src="https://thumbnail.imgbin.com/1/19/8/imgbin-javascript-logo-html-comment-blog-others-rYkexXzhunDcAfiR8EJUGRYh9_t.jpg" alt="JavaScript logo">
+                    <p>JavaScript es un lenguaje de programación de alto nivel que se utiliza principalmente para agregar interactividad a las páginas web. Fue creado por <strong> Brendan Eich </strong> y lanzado por primera vez en <strong> diciembre de 1995</strong>, se introdujo como una forma de agregar programas a páginas web en el navegador Netscape Navigator. </p> 
 
+                    <p>En el año 1994 aparece Netscape, el primer navegador masivo de la historia a partir de Mosaic, netscape no tenía ingresos ni modelo de negocios, pero al momento de salir a la bolsa como era la siguiente revolución de la tecnología ganó muchísimo dinero en su salida a la bolsa. Ahí fue donde inicio lo que conocemos como la <strong>la guerra de los navegadores</strong>  ya que Bill Gates(Microsoft) desarrolló su propio navegador web llamado Internet Explorer que atacó con todo, esta tenía recursos prácticamente ilimitados.</p>
+
+                    <p>Netscape se dió cuenta de que las páginas web son bastante básicas, <strong>no había interacción</strong>, solamente estaban para consumir como una revista pero en una pantalla, por lo que decidieron crear un lenguaje de programación que funcionara en el navegador. Un lenguaje básico de scripting(la escritura y ejecución de scripts o programas de secuencias de comandos). Es decir, un lenguaje de comandos específicos para hacer algunas cosas básicas. </p>
+
+                    <p>Brendan Eich fue quien creo JavaScript en apenas una semana porque estaban en plena guerra de los navegadores. Eich hizo lo que podía en una semana, sin embargo este tuvo errores y arrastró la mala fama de JavaScript durante varios años, al inicio este se llamaba LiveScript, pero por la fama de Java en ese momento le cambiaron el nombre a <strong>JavaScript</strong>.</p>
+
+                    <p>Pese a que Netscape hizo su estandarización en ecma(que obviamente ignoro Microsoft), en 1999 salio la última versión de su estándar. De 1999 hasta el año 2009(10 años), JavaScript no tuvo una nueva especificación, este fue abandonado por una década.</p>
+
+                    <h3>El renacimiento!</h3>
+
+                    <p>En el año 2002 aparece un libro que marca una especie de antes y después en el mundo de JavaScript, llamado JavaScript: The Good Parts, de Douglas Crockford. Este libro básicamente te dice que JavaScript no es un mal lenguaje, sino que tú eres un mal programador. Este libro realmente le devolvió la vida a JavaScript porque le dijo a la gente: oye, tú lo estás usando mal. JavaScript es excelente, fíjate las cosas que se pueden hacer con él.</p>
+
+                    <p>En 2002 también se lanza Firefox, un navegador que competía contra Internet Explorer en una segunda guerra de los navegadores (la primera la perdió Netscape :c ). Netscape fue arrasado de la faz de la tierra por Microsoft, pero en 1998 Netscape abre su código y con eso, se crea el concepto de <strong>Open Source</strong>.</p>
+
+                    <h4>Microsoft jugaba sucio.</h4>
+                    <p>Microsoft tuvo un juicio de monopolio porque internet estaba instalado en Windows y no podías desinstalarlo, tampoco podías cambiar de navegador predeterminado. O sea, habían jugado bastante sucio esta guerra de navegadores.</p>
+
+                    <p>Internet Explorer llegó a tener más del 95% del mercado de Internet. Incluso, la gente creía que la “e” de Internet Explorer era realmente Internet.</p>
+
+
+                    <h4>Frameworks JavaScript.</h4>
+                    <p> Como lenguaje de programación la evolución de JavaScript ha sido enorme y sigue creciendo mediante nuevas implementaciones, frameworks y librerías que se utilizan para diferentes usos. Todo esto hace imposible para los desarrolladores poder conocer todo de este lenguaje. Es aquí donde los frameworks se presentan como una especie de navaja suiza para facilitar su trabajo. </p>
+                    <p>Estos son los más populares:</p>
+                    <ul>
+                        <li><strong>jQuery.js-2006:</strong> uno de los clásicos, han pasado muchos años desde que apareció en el mercado y se convirtió en el  convirtió en el amo y señor absoluto de la web por una década.
+                            <p> La explosión de jQuery permitía que algunas tareas, que se mandaban al servidor, ahora se les encargaran al navegador. Y como los navegadores eran más potentes, cada vez se desarrollaba más el concepto de aplicaciones web. Ya no sitios web, sino aplicaciones completas, con toda su lógica y negocio, pero funcionando en un navegador</p>
+                        </li>
+                        <li><strong>Node.js-2009:</strong> Node.js no es un framework, es un entorno de ejecución, que son cosas totalmente diferentes. Con Node.js, ahora tenemos JavaScript en el servidor, en el navegador y podemos crear las famosas aplicaciones universales, que tengan JavaScript en todo el stack..</li>
+                        <li><strong>Angular.js-2010:</strong> este framework es desarrollado por Google y por tanto uno de los más populares. En la práctica no necesita presentación al ser el framework MVW(Model View WhatEver) que se ha encargado de traer orden a las aplicaciones JavaScript y potenciar las Arquitecturas SPA.</li>
+                        <li><strong>React.js-2013:</strong> la librería de Facebook orientada a la gestión de Interfaces de usuario. Muy extendido a la hora de desarrollar aplicaciones móviles. Este fue creado con la filosofía de crear componentes reutilizables, crear un virtual DOM, que era el DOM en memoria para no sobrecargar el navegador y un nuevo lenguaje, llamado JSX, que te permite escribir JavaScript como si estuvieras escribiendo HTML</li>
+                        <li><strong>Meteor.js:</strong> uno de los frameworks JavaScript que está adquiriendo mayor tracción en el mercado. Pensado para desarrollar aplicaciones JavaScript puedan ejecutar su código en entornos cliente cliente y servidor.</li>
+                    </ul>
+                    <h3>Versiones:</h3>
+                    <p>A lo largo de los años, JavaScript ha evolucionado con varias versiones importantes:</p>
+                    <ul>
+                        <li>JavaScript 1.0 (1995)</li>
+                        <li>JavaScript 1.1 (1996)</li>
+                        <li>JavaScript 1.2 (1997)</li>
+                        <li>JavaScript 1.3 (1998)</li>
+                        <li>JavaScript 1.4 (1999)</li>
+                        <li>JavaScript 1.5 (2000)</li>
+                        <li>ECMAScript 1 (1997)</li>
+                        <li>ECMAScript 2 (1998)</li>
+                        <li>ECMAScript 3 (1999)</li>
+                        <li>ECMAScript 4 (2004)</li>
+                        <li>ECMAScript 5 (2009)</li>
+                        <li>ECMAScript 6 (2015)</li>
+                        <li>CMAScript 2015 (ES7)</li>
+                        <li>CMAScript 2016 (ES7)</li>
+                        <li>ECMAScript 2017 (ES8)</li>
+                        <li>ECMAScript 2018 (ES9)</li>
+                    </ul>
+                    <p>Ahora JavaScript se ha convertido en un lenguaje fundamental para el desarrollo web y se utiliza en una variedad de aplicaciones, desde páginas web simples hasta aplicaciones web complejas y móviles.</p>
+            </section>
+
+            <section>
+            <h3>Referencias</h3>
+                    <p>Paginas Consultadas:</p>
+                    <ul>
+                        <li>La historia completa de JavaScript, el único lenguaje que entienden los navegadores. (s/f). ..Ed.team. Recuperado el 7 de septiembre de 2023, de <a href="https://ed.team/blog/la-historia-completa-de-javascript-el-unico-lenguaje-que-entienden-los-navegadores">La historia completa de JavaScript, el único lenguaje que entienden los navegadores</a>
+                        <li>Robledano, A. (2019, agosto 12). Qué es Javascript. Openwebinars.net. Recuperado el 7 de septiembre de 2023, de <a href="https://openwebinars.net/blog/que-es-javascript/">Qué es JavaScript?</a></li>
+                    </ul>
+            </section>
+        </article>
+    </main>
     <footer>
-        <p>&copy; 2023 Pedro Méndez Jośe Manuel All rights reserved.</p>
+        <p>&copy; Anónimos INC All rights reserved.</p>
     </footer>
 </body>
 </html>
