--- a/TareaL-HTML5/Js.html
+++ b/TareaL-HTML5/Js.html
@@ -21,7 +21,7 @@
         <article>
         <h2>Historia de JavaScript! El único lenguaje que entienden los navegadores!!</h2> 
             <section>
-                <img src="https://thumbnail.imgbin.com/1/19/8/imgbin-javascript-logo-html-comment-blog-others-rYkexXzhunDcAfiR8EJUGRYh9_t.jpg" alt="JavaScript logo">
+                <img src="img/js.jpg" alt="css_logo">
                     <p>JavaScript es un lenguaje de programación de alto nivel que se utiliza principalmente para agregar interactividad a las páginas web. Fue creado por <strong> Brendan Eich </strong> y lanzado por primera vez en <strong> diciembre de 1995</strong>, se introdujo como una forma de agregar programas a páginas web en el navegador Netscape Navigator. </p> 
 
                     <p>En el año 1994 aparece Netscape, el primer navegador masivo de la historia a partir de Mosaic, netscape no tenía ingresos ni modelo de negocios, pero al momento de salir a la bolsa como era la siguiente revolución de la tecnología ganó muchísimo dinero en su salida a la bolsa. Ahí fue donde inicio lo que conocemos como la <strong>la guerra de los navegadores</strong>  ya que Bill Gates(Microsoft) desarrolló su propio navegador web llamado Internet Explorer que atacó con todo, esta tenía recursos prácticamente ilimitados.</p>
