--- a/TareaL-Bootstrap/Recetas/index_recetas.html
+++ b/TareaL-Bootstrap/Recetas/index_recetas.html
@@ -17,7 +17,9 @@
       <h4>Salads & Life</h4>
       <ul class="nav nav-pills nav-stacked">
         <li><a href="../menu.html">MENU</a></li>
-        <li class="active"><a href="index_recetas.html">RECETAS</a></li>
+        <li class="active"><a href="index_recetas.html">RECETAS</a> <span> </li>
+            <a href="recetaFormulario.html" class="btn btn-primary">Crear Nueva Receta</a>
+        </span> 
         <li><a href="../Inventarios/inventarioEnsaladas.html">INVENTARIO</a></li>
       </ul><br>
       <div class="input-group">
