--- a/TareaL-Bootstrap/Recetas/recetaFormulario.html
+++ b/TareaL-Bootstrap/Recetas/recetaFormulario.html
@@ -41,7 +41,7 @@
         <form>
             <div class="form-group">
                 <label for="nombreReceta">Nombre de la Receta</label>
-                <input type="text" class="form-control" id="nombreReceta" name="nombreReceta" required>
+                <input type="text" class="form-control" id="nombreReceta" name="nombreReceta"   placeholder="Enter recipe name" required>
             </div>
 
             <div class="form-group">
@@ -110,7 +110,7 @@
 
             <div class="form-group">
                 <label for="procedimiento">Procedimiento</label>
-                <textarea class="form-control" id="procedimiento" name="procedimiento" rows="4" required></textarea>
+                <textarea class="form-control" id="procedimiento" name="procedimiento" rows="4"  placeholder="Enter recipe procedure"  required></textarea>
             </div>
 
             <button type="submit" class="btn btn-primary">Crear Receta</button>
