--- a/TareaL-Bootstrap/Inventarios/inventarioFormulario.html
+++ b/TareaL-Bootstrap/Inventarios/inventarioFormulario.html
@@ -13,7 +13,7 @@
 
 <div class="container-fluid">
   <div class="row content">
-    <div class="col-sm-3 sidenav">
+    <div class="col-sm-3">
       <h4>Salads & Life</h4>
       <ul class="nav nav-pills nav-stacked">
         <li><a href="../menu.html">MENU</a></li>
