--- a/TareaL-Bootstrap/menu.html
+++ b/TareaL-Bootstrap/menu.html
@@ -12,7 +12,7 @@
 <body>
 
 <div class="container-fluid">
-  <div class="row content">
+  <div class="row">
     <div class="col-sm-3 sidenav">
       <h4>Menu</h4>
       <ul class="nav nav-pills nav-stacked">
