UPDATE index_recetas to menu and recipe view

--- a/TareaL-Bootstrap/Inventarios/inventarioFormulario.html
+++ b/TareaL-Bootstrap/Inventarios/inventarioFormulario.html
@@ -49,7 +49,7 @@ raro
 
     <div class="col-sm-9  ms-sm-auto col-lg-10 px-md-4">
       <div class="row">
-        <div class="col-md-3 ">
+        <div class="col-md-12 ">
           <h2 class="text-center bg-info rounded-5 ">FORMULARIO DE INGREDIENTES</h2>
         </div>
       </div>
@@ -82,7 +82,7 @@ raro
 </div>
 
 <footer class="container-fluid">
-  <p> &copy; Salads & Life All rights reserved. </p>
+  <p> &copy; Salads & Life All rights reserved 2024. </p>
 </footer>
 
 </body>
