--- a/TareaL-Bootstrap/Recetas/recetaFormulario.html
+++ b/TareaL-Bootstrap/Recetas/recetaFormulario.html
@@ -18,16 +18,15 @@
       <div class="position-sticky sidenav">
         <h4>Salads & Life</h4>
           <ul class="nav flex-column nav-fill">
+
             <li class="nav-item">
               <a class="nav-link" href="../menu.html">MENU</a>
             </li>
+
             <li class="nav-item">
               <ul class="nav flex-column">
                 <li class="nav-item">
-                  <a class="nav-link" href="index_recetas.html">RECETAS</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="recetaFormulario.html">EDITAR</a>
+                  <a class="nav-link" href="recetaFormulario.html">CREAR RECETA</a>
                 </li>
               </ul>
             </li>
@@ -37,7 +36,7 @@
           </ul>
           <div class="input-group mt-3">
             <span class="input-group-text">
-              <img src="../Recetas/img/search.svg"  alt="Search icon" width="mx-auto"> 
+              <img src="img/search.svg"  alt="Search icon" width="mx-auto"> 
             </span>
             <input type="text" class="form-control" placeholder="Search S&L ">
             <button class="btn btn-outline-secondary" type="button">
@@ -48,8 +47,8 @@
 
     <div class="col-sm-9  ms-sm-auto col-lg-10 px-md-4">
       <div class="row">
-        <div class="col-md-3 ">
-          <h2 class="text-center bg-info rounded-5 ">FORMULARIO DE ENSALADAS</h2>
+        <div class="col-md-12 ">
+          <h2 class="text-center bg-info rounded-5 ">FORMULARIO PARA CREAR UNA NUEVA ENSALADA</h2>
         </div>
       </div>
       
@@ -59,7 +58,7 @@
         <form>
             <div class="form-group">
                 <label for="nombreReceta">Nombre de  la Receta</label>
-                <input type="text" class="form-control" id="nombreReceta" name="nombreReceta"   placeholder="nombre generico de receta" value="Ensalada de manzana" required>
+                <input type="text" class="form-control" id="nombreReceta" name="nombreReceta"   placeholder="nombre generico de receta" value="Ensalada de manzana con zanahoría" required>
             </div>
 
             <div class="form-group">
@@ -72,7 +71,7 @@
                     </div>
                     <div class="col-md-4">
                         <label for="cantidad1">Cantidad del Ingrediente Principal</label>
-                        <input type="number" class="form-control mb-2" name="cantidad1" placeholder = "cantidad en gramos" value = "1000" required>
+                        <input type="number" class="form-control mb-2" name="cantidad1" placeholder = "cantidad en gramos" value = "2000" required>
                     </div>
                 </div>
 
@@ -90,33 +89,33 @@
                 <div class="row">
                   <div class="col-md-4">
                       <label for="ingrediente3">Ingrediente 3</label>
-                      <input type="text" class="form-control mb-2" name="ingrediente3" placeholder = "nombre de ingrediente" value = "yogurth" required>
+                      <input type="text" class="form-control mb-2" name="ingrediente3" placeholder = "nombre de ingrediente" value = "crema acida" required>
                   </div>
                   <div class="col-md-4">
                       <label for="cantidad4">Cantidad del Ingrediente 3</label>
-                      <input type="number" class="form-control mb-2" name="cantidad3" placeholder = "cantidad en gramos" value = "300" required>
+                      <input type="number" class="form-control mb-2" name="cantidad3" placeholder = "cantidad en mililitros" value = "500" required>
                   </div>
               </div>
 
                 <div class="row">
                   <div class="col-md-4">
                       <label for="ingrediente4">Ingrediente 4</label>
-                      <input type="text" class="form-control mb-2" name="ingrediente4" placeholder = "nombre de ingrediente" value = "nuez" required>
+                      <input type="text" class="form-control mb-2" name="ingrediente4" placeholder = "nombre de ingrediente" value = "leche condensada" required>
                   </div>
                   <div class="col-md-4">
                       <label for="cantidad4">Cantidad del Ingrediente 4</label>
-                      <input type="number" class="form-control mb-2" name="cantidad4" placeholder = "cantidad en gramos" value = "80" required>
+                      <input type="number" class="form-control mb-2" name="cantidad4" placeholder = "cantidad en mililitros" value = "500" required>
                   </div>
               </div>
 
                 <div class="row">
                   <div class="col-md-4">
-                      <label for="ingrediente5">Ingrediente 5 (aderezo)</label>
-                      <input type="text" class="form-control mb-2" name="ingrediente4" placeholder = "nombre de ingrediente" value = "lechera" required>
+                      <label for="ingrediente5">Cantidad del Ingrediente 5</label>
+                      <input type="text" class="form-control mb-2" name="ingrediente5" placeholder = "nombre de ingrediente" value = "agua" required>
                   </div>
                   <div class="col-md-4">
                       <label for="cantidad5">Cantidad del Ingrediente 5</label>
-                      <input type="number" class="form-control mb-2" name="cantidad5" placeholder = "cantidad en gramos" value = "120" required>
+                      <input type="number" class="form-control mb-2" name="cantidad5" placeholder = "cantidad en mililitros" value = "1000" required>
                   </div>
               </div>
             </div>
@@ -128,7 +127,7 @@
 
             <div class="form-group">
                 <label for="procedimiento">Procedimiento</label>
-                <textarea class="form-control" id="procedimiento" name="procedimiento" rows="4"  placeholder="Enter recipe procedure"  required></textarea>
+                <textarea class="form-control" id="procedimiento" name="procedimiento" rows="6"  placeholder="Enter recipe procedure"  required></textarea>
             </div>
 
             <button type="submit" class="btn btn-primary">Crear Receta</button>
@@ -139,7 +138,7 @@
 </div>
 
 <footer class="container-fluid">
-  <p> &copy; Salads & Life All rights reserved. </p>
+  <p> &copy; Salads & Life All rights reserved 2024. </p>
 </footer>
 
 </body>
