UPDATE formularios y un poco de inventario

--- a/TareaL-Bootstrap/Inventarios/inventarioEnsaladas.html
+++ b/TareaL-Bootstrap/Inventarios/inventarioEnsaladas.html
@@ -30,6 +30,9 @@
             <li class="nav-item">
               <a class="nav-link" href="../Inventarios/inventarioEnsaladas.html">INVENTARIO</a>
             </li>
+            <li class="nav-item">
+              <a class="nav-link" href="../Inventarios/inventarioFormulario.html">CREAR INGREDIENTE</a>
+            </li>
           </ul>
           <div class="input-group mt-3">
             <span class="input-group-text">
@@ -49,9 +52,13 @@
         </div>
       </div>
       <p>La comida es nuestrá pasión y más la saludable, por eso queremos compartir nuestras recetas.</p>
-      <br><br>
       
-      <h4><small>Ingredientes frescos</small></h4>
+
+      <div class="row">
+        <div class="col-md-6 center">
+          <h2 class="text-center bg-info rounded-5 "><small>Ingredientes frescos</small></h2>
+        </div>
+      </div>
       <hr>
       <ul class="nav nav-pills nav-stacked">
         <div class = "bg-success">
