--- a/TareaL-Bootstrap/Inventarios/inventarioEnsaladas.html
+++ b/TareaL-Bootstrap/Inventarios/inventarioEnsaladas.html
@@ -60,7 +60,7 @@
         </div>
       </div>
       <hr>
-      <ul class="nav nav-pills nav-stacked">
+      <!-- <ul class="nav nav-pills nav-stacked">
         <div class = "bg-success">
             <li>Ingrediente 1</li>
             <p class = "badge badge-primary">
@@ -85,7 +85,98 @@
                 Fecha adquisición
             </p>
         </div>
-      </ul><br>
+      </ul><br> -->
+
+      <div class="col-md-6">
+        <div class="card-header fw-bold bg-info "></div>
+        <div class="border border-3 border-success p-1">
+          <div class="bg-info bg-opacity-50">
+              <table class="table">
+                <thead>
+                    <tr>
+                        <th>Nombre</th>
+                        <th>Existencia</th>
+                        <th>Costo</th>
+                        <th>Fecha de Adquisición</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>Manzanas Amarillas</td>
+                        <td>25</td>
+                        <td>25</td>
+                        <td>05-10-2023</td>
+                    </tr>
+                    <tr>
+                      <td>Zanahorías</td>
+                      <td>25</td>
+                      <td>34</td>
+                      <td>05-10-2023</td>
+                    </tr>
+                    <tr>
+                      <td>Crema Ácida</td>
+                      <td>34</td>
+                      <td>34</td>
+                      <td>05-10-2023</td>
+                  </tr>
+                  <tr>
+                    <td>Leche Condensada</td>
+                    <td>8</td>
+                    <td>825</td>
+                    <td>05-10-2023</td>
+                  </tr><tr>
+                    <td>Agua</td>
+                    <td>25</td>
+                    <td>34</td>
+                    <td>05-10-2023</td>
+                </tr>
+                <tr>
+                  <td>Limón</td>
+                  <td>34</td>
+                  <td>825</td>
+                  <td>05-10-2023</td>
+                </tr><tr>
+                  <td>Tomate cherry</td>
+                  <td>8</td>
+                  <td>34</td>
+                  <td>05-10-2023</td>
+              </tr>
+              <tr>
+                <td>Queso Mozzarella</td>
+                <td>25</td>
+                <td>825</td>
+                <td>05-10-2023</td>
+              </tr><tr>
+                <td>Al34ahaca</td>
+                <td>3425</td>
+                <td>8205-10-2023</td>
+                <td>05-10-2023</td>
+            </tr>
+            <tr>
+              <td>Aceite de Oliva extra virgen suave</td>
+              <td>34</td>
+              <td>34</td>
+              <td>05-10-2023</td>
+            </tr>
+            <tr>
+              <td>Pimienta</td>
+              <td>8</td>
+              <td>825</td>
+              <td>05-10-2023</td>
+            </tr>
+                  
+                    <!-- Agrega más ingredientes según sea necesario
+                    
+                    <tr>
+                        <td>Limón</td>
+                        <td>1 pieza</td>
+                    </tr>
+                   -->
+                </tbody>
+            </table>
+          </div>
+        </div>  <!-- Agrega más ingredientes según sea necesario -->
+      </div>
 
       <h4>Dejanos un comentario:</h4>
       <form role="form">
